@@ -90,6 +90,12 @@ CFLAGS="$CFLAGS -include mcheck.h"
 AC_DEFINE(WITH_MTRACE, 1, Define if mtrace memory leak detection was enabled)
 )
 
+dnl This particular one enables berkeley db to emit detected errors
+AC_ARG_WITH(berkdb-debug,
+[  --with-berkdb-debug     Use berkeley db error reporting if detected).],
+AC_DEFINE(BERKDB_ERROR_REPORTING, 1, Define if berkeley db error reporting was enabled)
+)
+
 dnl
 dnl Enables the kernel module to build if the appropriate
 dnl linux-2.6.x path is specified
